--- a/justforyousimple/style.css
+++ b/justforyousimple/style.css
@@ -62,6 +62,7 @@ nav {
     height: 3px;
     background-color: #E3E2DF;
     margin: 5px;
+    transition: all 0.3s ease;
 }
 
 @media screen and (max-width: 1024px) {
@@ -77,13 +78,13 @@ nav {
     .nav-links {
         position: absolute;
         right: 0px;
-        height: 92vh;
+        height: 87vh;
         top: 8vh;
         background-color: #5D001E;
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 40%;
+        width: 50%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
     }
@@ -108,4 +109,137 @@ nav {
         opacity: 1;
         transform: translateX(0px);
     }
+}
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
+
+.toggle .line2 {
+    opacity: 0;
+}
+
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+}
+
+.wrapper {
+    padding: 10px;
+    margin: 0 auto;
+    width: 550px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -1;
+}
+
+@media screen and (max-width: 768px) {
+    .wrapper {
+        width: 100%;
+    }
+}
+
+.wrapper .item {
+    visibility: hidden;
+    display: none;
+}
+
+.wrapper h2 {
+    font-size: 80px;
+    margin: 0;
+    color: #5D001E;
+    text-align: left;
+    font-family: 'Montserrat', sans-serif;
+}
+
+@media screen and (max-width: 1024px) {
+    .wrapper h2 {
+        font-size: 56px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .wrapper h2 {
+        font-size: 42px;
+        text-align: center;
+    }
+}
+
+.wrapper>div {
+    min-height: 20px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display: flex;
+    align-items: flex-end;
+    font-weight: bold;
+    color: #e3afbc;
+    font-size: 24px;
+}
+
+@media screen and (max-width: 768px) {
+    .wrapper>div {
+        font-size: 18px;
+    }
+}
+
+.wrapper>div:after {
+    content: "";
+    width: 10px;
+    height: 4px;
+    display: block;
+    background: black;
+    color: #ffd300;
+    margin-bottom: 4px;
+    margin-left: 2px;
+    animation-duration: 350ms;
+    animation-name: fade;
+    animation-direction: alternate;
+    animation-iteration-count: infinite;
+}
+
+@keyframes fade {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
+
+footer {
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+    left: 0;
+    right: 0;
+    background-color: #5D001E;
+    min-height: 6vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+    footer {
+        position: absolute;
+    }
+}
+
+.fab {
+    color: #E3E2DF;
+    font-size: 24px;
+    padding-right: 50px;
+}
+
+@media screen and (max-width: 768px) {
+    .fab {
+        padding-right: 16px;
+    }
+}
+
+.btn-group {
+    text-align: center;
 }
