--- a/insightsolutionsfromageexample/style.css
+++ b/insightsolutionsfromageexample/style.css
@@ -25,6 +25,13 @@
                             }
                             
                             @media only screen and (max-width: 768px) {
+                                .row {
+                                    margin-right: 0px;
+                                    margin-left: 0px;
+                                }
+                            }
+                            
+                            @media only screen and (max-width: 768px) {
                                 .overlay {
                                     padding-top: 0px;
                                     padding-bottom: 0px;
@@ -36,6 +43,13 @@
                                 background-color: white;
                                 border-radius: 40px;
                                 padding: 0px;
+                            }
+                            
+                            @media only screen and (max-width: 768px) {
+                                .col-md-6 {
+                                    padding-right: 0px;
+                                    padding-left: 0px;
+                                }
                             }
                             
                             @media only screen and (max-width: 768px) {
