--- a/insightthirdsamplefly/css/style.css
+++ b/insightthirdsamplefly/css/style.css
@@ -1579,183 +1579,221 @@ body.dark .shadow-dark {
     background-color: transparent;
 }
 
-/* Début CSS Footer */
 
-.row-footer {
-    display: -ms-flexbox;
-    display: flex; /* à enlever pour le responsive */
-    /* -ms-flex-wrap: wrap; */
-    /* flex-wrap: wrap;  */
-    /* margin-right: -15px;
-    margin-left: -15px;  */
-    position: relative;
-}
 
-ul {
-    margin: 0px;
-    padding: 0px;
-}
-.footer-section {
-  background: #151414;
-  position: relative;
-}
-.footer-cta {
-  border-bottom: 1px solid #373636;
-  padding-bottom: 1em;
-}
-.single-cta i {
-  color: #ff0000;/* #ff5e14; */
-  font-size: 30px;
-  float: left;
-  margin-top: 8px;
-}
-.cta-text {
-  padding-left: 15px;
-  display: inline-block;
-}
-.cta-text h4 {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 2px;
-}
-.cta-text span {
-  color: #757575;
-  font-size: 15px;
-}
-.footer-content {
-  position: relative;
-  z-index: 2;
-  padding-top: 1em;
-}
-.footer-pattern img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 330px;
-  background-size: cover;
-  background-position: 100% 100%;
-}
-.footer-logo {
-  margin-bottom: 30px;
-}
-.footer-logo img {
-    max-width: 200px;
-}
-.footer-text p {
-  margin-bottom: 14px;
-  font-size: 0.875em;/*14px; */
-      color: #7e7e7e;
-  line-height: 28px;
-}
-.footer-social-icon span {
-  color: #fff;
-  display: block;
-  font-size: 20px;
-  font-weight: 700;
-  font-family: 'Montserrat', sans-serif; /*'Poppins'*/
-  margin-bottom: 20px;
-}
-.footer-social-icon a {
-  color: #fff;
-  font-size: 16px;
-  margin-right: 15px;
-}
-.footer-social-icon i {
-  height: 40px;
-  width: 40px;
-  text-align: center;
-  line-height: 38px;
-  border-radius: 50%;
-}
-.facebook-bg{
-  background: #3B5998;
+
+/* FOOTER */
+.footer {
+	width: 100%;
+	background: #302f4b;
+    display: block;
+    Width: calc(100% + 60px);
+    Margin: 0 -30px;
+ }
+
+ .inner-footer {
+	 width: 95%;
+	 margin: auto;
+	 padding: 30px 10px;
+	 display: flex;
+	 flex-wrap: wrap;
+	 box-sizing: border-box;
+	 justify-content: center;
+ }
+
+.footer-items {
+	width: 25%;
+	padding: 10px 10px; 
+	box-sizing: border-box;
+	color: #fff;
 }
 
-.linkedin-bg{
-  background: rgb(105, 149, 199);/*#DD4B39; */
-}
-.footer-widget-heading h3 {
-  color: #fff;
-  font-size: 20px;
-  font-weight: 600;
-  margin-bottom: 40px;
-  position: relative;
-}
-.footer-widget-heading h3::before {
-  content: "";
-  position: absolute;
-  left: 0;
-  bottom: -15px;
-  height: 2px;
-  width: 50px;
-  background: #ff0000; /*#ff5e14; */
-}
-.footer-widget ul li {
-  display: inline-block;
-  float: left;
-  width: 50%;
-  margin-bottom: 12px;
-  font-size: 0.875em;
-}
-.footer-widget ul li a:hover{
-  color: #ff0000; /*#ff5e14; */
-}
-.footer-widget ul li a {
-  color: #878787;
-  text-transform: capitalize;
-}
-.subscribe-form {
-  position: relative;
-  overflow: hidden;
-}
-.subscribe-form input {
-  width: 100%;
-  padding: 14px 28px;
-  background: #2E2E2E;
-  border: 1px solid #2E2E2E;
-  color: #fff;
-}
-.subscribe-form button {
-    position: absolute;
-    right: 0;
-    background: #ff0000; /*#ff5e14; */
-    padding: 13px 20px;
-    border: 1px solid /* #ff5e14; */ #ff0000;
-    top: 0;
-}
-.subscribe-form button i {
-  color: #fff;
-  font-size: 22px;
-  transform: rotate(-6deg);
-}
-.copyright-area{
-  background: /*#202020; */ #29323c;
-  padding: 25px 0;
-}
-.copyright-text p {
-  margin: 0;
-  font-size: 14px;
-  color: #878787;
-}
-.copyright-text p a{
-  color: /*#ff5e14;*/ #ff0000;
-}
-.footer-menu li {
-  display: inline-block;
-  margin-left: 20px;
-}
-.footer-menu li:hover a{
-  color: /* #ff5e14; */ #ff0000;
-}
-.footer-menu li a {
-  font-size: 14px;
-  color: #878787;
+.footer-items p {
+	font-size: 0.875em; 
+	text-align: center; /* justify */
+	line-height: 1.815em;
+	color: #fff;
+    font-family: Montserrat;
+    font-style: italic;
+    /* width: 90%; */
 }
 
-/*Footer*/
+.footer-items h1, h3 {
+	color: #fff;
+  font-family: Montserrat;
+}
+
+.footer-items h1 {
+    text-align: center;
+}
+
+.footer-border1 {
+	height: 3px;
+	width: 40px;
+	background: #da3641;
+	color: #da3641;
+	background-color: #da3641; 
+	border: 0px;
+}
+
+.footer-items ul {
+	list-style: none;
+	color: #fff;
+	font-size: 0.815em; 
+	letter-spacing: 0.5px;
+  font-family: Montserrat;
+ }
+
+.footer-items ul a {
+	text-decoration: none;
+	outline: none;
+	color: #fff;
+	transition: 0.3s;
+}
+
+.footer-items ul a:hover {
+	color: #da3641;
+}
+
+.footer-items ul li {
+	margin: 12px 0;
+	height: 25px;
+}
+
+.footer-items li i {
+	margin-right: 20px;
+}
+
+.footer-social-media {
+	width: 100%;
+	color: #fff;
+	text-align: center;
+	font-size: 20px;
+}
+
+.footer-social-media a {
+	text-decoration: none;
+}
+
+.footer-social-media i {
+	height: 25px;
+	width: 25px;
+	margin: 20px 10px;
+	padding: 4px;
+	color: #fff;
+	transition: 0.5s;
+}
+
+.footer-social-media i:hover {
+	transform: scale(1.5);
+}
+
+.footer-bottom {
+	padding: 10px;
+	background: #00121b;
+	color: #fff;
+	font-size: 12px;
+	text-align: center;
+}
+
+/* for tablet mode view */
+
+@media screen and (max-width: 1275px) {
+	.footer-items {
+		width: 50%;
+	}
+}
+
+/* for mobile screen view */
+
+@media screen and (max-width: 660px) {
+	.footer-items {
+		width: 100%;
+	}
+}
 
 
 
 
-/*Footer*/
+/* Newsletter in footer */
+
+input[type="email"] {
+	display: block;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 0.815em;
+	padding: 0.8em; 
+	border: 1px solid lighten(black, 80%);
+	width: 90%; 
+	margin: 2em 1em 1em; 
+}
+.btn-newsletter {
+	border: none;
+	background: #da3641;
+	color: white;
+	display: block;
+	width: 90%; /*100%;*/
+	padding: 1em 0em 1em; /*1.61rem 1rem;*/
+	font-size: 0.815em;
+	font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    margin: 0em 1em 1em;
+}
+.btn-newsletter:hover,
+	.btn-newsletter:focus {
+		outline: 0;
+		background: #d4d4e3;
+		color: black;
+		font-weight: 700;
+    }
+    
+
+/* CONDITIONS GENERALES DE VENTES */
+.cgv-partie1 { /* Pour le 1er gros-titre de la page uniquement */
+    text-decoration: underline; 
+    text-transform: uppercase; 
+}
+.cgv-partie { /* Pour les autres gros-titres de la page, exept pour le premier */
+    text-decoration: underline; 
+    text-transform: uppercase; 
+    padding-top: 1em;
+}
+.cgv-partie-non-underline { /* Warning important au début des CGPC */
+    text-transform: uppercase;
+    font-style: italic;
+    padding-bottom: 1em;
+}
+.cgv-black {
+    font-size: 1.125em;
+}
+.cgv-red-p {
+    color: #da3641 !important;
+}
+.cgv-red-p-2 {
+    color: #da3641 !important;
+    padding-left: 2em;
+}
+.cgv-red-p-underline {
+    color: #da3641;
+    text-decoration: underline;
+}
+
+.cgv-liste {
+    padding-left: 4em;
+    color: #504e70;
+}
+
+.cgpc-partie-big {
+    font-size : 1.875em;
+    text-transform: uppercase;
+}
+
+.cgpc-partie1 {
+    padding-left: 1em;
+    text-decoration: underline; 
+    text-transform: uppercase; 
+}
+
+.cgv-red-p-bold {
+    color: #da3641 !important;
+    font-weight: bold;
+}
