--- a/finalsampleisreal/css/skins/yellow.css
+++ b/finalsampleisreal/css/skins/yellow.css
@@ -1,12 +1,12 @@
 
 .aside .logo a::before{
-	border-top:4px solid #72b626;
-	border-left:4px solid #72b626;
+	border-top:4px solid #ffb400;
+	border-left:4px solid #ffb400;
 }
 
 .aside .logo a::after{
-	border-right:4px solid #72b626;
-	border-bottom:4px solid #72b626;
+	border-right:4px solid #ffb400;
+	border-bottom:4px solid #ffb400;
 }
 .contact .contact-info-item .icon .fa,
 .blog .blog-item-inner .blog-info .blog-tags a,
@@ -21,10 +21,10 @@ body.dark .aside .nav li a:hover,
 body.dark .aside .nav li a.active,
 .aside .nav li a:hover,
 .aside .nav li a.active{
- color:#72b626;	
+ color:#ffb400;	
 }
 .blog .blog-item-inner .blog-img .blog-date,
-.service .service-item .service-item-inner:hover .icon,
+/* .service .service-item .service-item-inner:hover .icon, */
 .about .about-content .timeline .circle-dot,
 .about .about-content .timeline .timeline-item::before,
 .about .about-content .skills .skill-item .progress .progress-in,
@@ -33,11 +33,25 @@ body.dark .aside .nav li a.active,
 .section-title h2::before,
 .aside .nav-toggler span,
 .aside .nav-toggler span::before,
-.aside .nav-toggler span::after,
-.home .intro .social-links a{
- background-color: #72b626;		
+.aside .nav-toggler span::after
+/* .home .intro .social-links a*/{
+ background-color: #ffb400;		
 }
 
 .portfolio .portfolio-filter button.active{
-	border-color:#72b626;		
+	border-color:#ffb400;		
+}
+
+/* Bouton principal "Nos solutions" */
+.cta, .read-more-trigger {
+	background-color: #ffb400;
+	border: 2px solid #ffb400;		
+}
+
+/* Barre de couleur sous "Menu, Liens utiles, Contact" du Footer */
+.footer-border1 {
+	background: #ffb400;
+}
+.btn-newsletter {
+	background: #ffb400;
 }
