--- a/finalsampleisreal/css/style.css
+++ b/finalsampleisreal/css/style.css
@@ -827,6 +827,26 @@ select {
     outline: none;
 }
 
+/* Responsive mobile */
+@media screen and (min-width: 375px) {
+    .accordion button {
+        width: 90%;
+    }
+}
+
+/* responsive only pixel2 */
+@media screen and (min-width: 411px) {
+    .accordion button {
+        width: 94%;
+    }
+}
+/* responsive only iphone 6/7/8 plus */
+@media screen and (min-width: 414px) {
+    .accordion button {
+        width: 93%;
+    }
+}
+
 .accordion button:hover,
 .accordion button:focus {
     cursor: pointer;
@@ -848,7 +868,7 @@ select {
     display: inline-block;
     position: absolute;
     top: 18px;
-    right: 0;
+    right: -22px; /* 0 */
     width: 22px;
     height: 22px;
     border: 1px solid;
@@ -1389,8 +1409,18 @@ body.dark .about .about-content .about-text h3,
 body.dark .section-title h2,
 body.dark .home .intro h1,
 body.dark .aside .logo a,
-body.dark .aside .nav li a {
+body.dark .aside .nav li a,
+body.dark .accordion button .icon {
     color: #ffffff;
+}
+
+#whitelogois { /* Supprime le logo blanc quand le style est Light */
+    display: none;
+}
+
+
+body.dark #whitelogois { /* Ajoute le logo blanc sous le logo noir */
+    display: block;
 }
 
 body.dark .contact .contact-form .form-item .form-control,
@@ -1403,8 +1433,14 @@ body.dark .about .about-content .timeline .timeline-date,
 body.dark .about .about-content .skills .skill-item .skill-percent,
 body.dark .about .about-content .personal-info .info-item p span,
 body.dark .about .about-content .about-text p,
-body.dark .home .intro p {
+body.dark .home .intro p,
+body.dark .accordion-title /* FAQ texte blanc */
+/* body.dark .accordion .accordion-content p FAQ texte des sous-sections blanc */ {
     color: #e9e9e9;
+}
+
+body.dark .accordion .accordion-content { /* When DARK MODE -> Couleur du texte pa */
+    color: #b6b6b6;
 }
 
 body.dark .aside,
@@ -1646,10 +1682,24 @@ body.dark .shadow-dark {
     margin: auto;
     padding: 15px 10px;
     /* 30px 10px; or 25px 10px */
-    display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
     justify-content: center;
+    text-align: center;
+}
+
+@media only screen and (min-width: 768px) {
+    .inner-footer {
+        display: flex;
+        text-align: start;
+    }
+
+}
+@media only screen and (max-width: 767px) {
+    .footer-border1 {
+        margin: 0 auto;
+    }
+
 }
 
 .footer-items {
@@ -1761,9 +1811,37 @@ h3 {
 
 /* for tablet mode view */
 
-@media screen and (max-width: 1275px) {
+/* @media screen and (max-width: 1275px) {
     .footer-items {
         width: 50%;
+    }
+} */
+
+/* special for iPad */
+@media screen and (max-width: 768px) {
+    .footer-items {
+        width: 29%;
+    }
+    .footer-image {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .footer-items {
+        width: 28%;
+    }
+    .footer-image {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 1027px) {
+    .footer-items {
+        width: 28%;
+    }
+    .footer-image {
+        display: none;
     }
 }
 
@@ -1912,3 +1990,9 @@ input[type="email"] {
 
 
 /* Les 2 rouges dispo : #D52B1E ou bien red simple */
+
+
+/* FIX responsive boutons FAQ */
+@media (max-width: 360px) {
+    
+}
