--- a/insightsolutionsvf/css/skins/green.css
+++ b/insightsolutionsvf/css/skins/green.css
@@ -1,13 +1,13 @@
-
-.aside .logo a::before{
-	border-top:4px solid #2196f3;
-	border-left:4px solid #2196f3;
+.aside .logo a::before {
+    border-top: 4px solid #72b626;
+    border-left: 4px solid #72b626;
 }
 
-.aside .logo a::after{
-	border-right:4px solid #2196f3;
-	border-bottom:4px solid #2196f3;
+.aside .logo a::after {
+    border-right: 4px solid #72b626;
+    border-bottom: 4px solid #72b626;
 }
+
 .contact .contact-info-item .icon .fa,
 .blog .blog-item-inner .blog-info .blog-tags a,
 .lightbox .lightbox-controls .prev-item .fa,
@@ -20,11 +20,15 @@ body.dark .portfolio .portfolio-filter button.active,
 body.dark .aside .nav li a:hover,
 body.dark .aside .nav li a.active,
 .aside .nav li a:hover,
-.aside .nav li a.active{
- color:#2196f3;	
+.aside .nav li a.active,
+.fa-arrow-alt-circle-left {
+    color: #72b626;
 }
+
 .blog .blog-item-inner .blog-img .blog-date,
+
 /* .service .service-item .service-item-inner:hover .icon, */
+
 .about .about-content .timeline .circle-dot,
 .about .about-content .timeline .timeline-item::before,
 .about .about-content .skills .skill-item .progress .progress-in,
@@ -34,25 +38,32 @@ body.dark .aside .nav li a.active,
 .aside .nav-toggler span,
 .aside .nav-toggler span::before,
 .aside .nav-toggler span::after
-/* .home .intro .social-links a*/{
- background-color: #2196f3;		
+/* .home .intro .social-links a*/
+
+{
+    background-color: #72b626;
 }
 
-.portfolio .portfolio-filter button.active{
-	border-color:#2196f3;		
+.portfolio .portfolio-filter button.active {
+    border-color: #72b626;
 }
 
-/* Bouton principal "nos solutions" accueil + le trigger de la page Mission */
-.cta, .read-more-trigger {
-	background-color: #2196f3;
-	border: 2px solid #2196f3;		
+
+/* Bouton principal "Nos solutions" */
+
+.cta,
+.read-more-trigger {
+    background-color: #72b626;
+    border: 2px solid #72b626;
 }
+
 
 /* Barre de couleur sous "Menu, Liens utiles, Contact" du Footer */
+
 .footer-border1 {
-	background: #2196f3;
+    background: #72b626;
 }
 
 .btn-newsletter {
-	background: #2196f3;
+    background: #72b626;
 }
