--- a/insightsolutionsvf/css/skins/orange.css
+++ b/insightsolutionsvf/css/skins/orange.css
@@ -1,11 +1,11 @@
 .aside .logo a::before {
-    border-top: 4px solid #D52B1E;
-    border-left: 4px solid #D52B1E;
+    border-top: 4px solid #fa5b0f;
+    border-left: 4px solid #fa5b0f;
 }
 
 .aside .logo a::after {
-    border-right: 4px solid #D52B1E;
-    border-bottom: 4px solid #D52B1E;
+    border-right: 4px solid #fa5b0f;
+    border-bottom: 4px solid #fa5b0f;
 }
 
 .contact .contact-info-item .icon .fa,
@@ -20,27 +20,15 @@ body.dark .portfolio .portfolio-filter button.active,
 body.dark .aside .nav li a:hover,
 body.dark .aside .nav li a.active,
 .aside .nav li a:hover,
-.aside .nav li a.active {
-    color: #D52B1E;
+.aside .nav li a.active,
+.fa-arrow-alt-circle-left {
+    color: #fa5b0f;
 }
 
-
-/* .blog .blog-item-inner .blog-img .blog-date,
-.service .service-item .service-item-inner:hover .icon,
-.about .about-content .timeline .circle-dot,
-.about .about-content .timeline .timeline-item::before,
-.about .about-content .skills .skill-item .progress .progress-in,
-.btn,
-.section-title h2::after,
-.section-title h2::before,
-.aside .nav-toggler span,
-.aside .nav-toggler span::before,
-.aside .nav-toggler span::after,
-.home .intro .social-links a{
- background-color: #D52B1E;
-} */
-
 .blog .blog-item-inner .blog-img .blog-date,
+
+/* .service .service-item .service-item-inner:hover .icon, */
+
 .about .about-content .timeline .circle-dot,
 .about .about-content .timeline .timeline-item::before,
 .about .about-content .skills .skill-item .progress .progress-in,
@@ -49,25 +37,33 @@ body.dark .aside .nav li a.active,
 .section-title h2::before,
 .aside .nav-toggler span,
 .aside .nav-toggler span::before,
-.aside .nav-toggler span::after {
-    background-color: #D52B1E;
+.aside .nav-toggler span::after
+/* .home .intro .social-links a*/
+
+{
+    background-color: #fa5b0f;
 }
 
 .portfolio .portfolio-filter button.active {
-    border-color: #D52B1E;
+    border-color: #fa5b0f;
 }
+
 
 /* Bouton principal "Nos solutions" */
-.cta, .read-more-trigger {
-	background-color: #D52B1E;
-	border: 2px solid #D52B1E;		
+
+.cta,
+.read-more-trigger {
+    background-color: #fa5b0f;
+    border: 2px solid #fa5b0f;
 }
 
+
 /* Barre de couleur sous "Menu, Liens utiles, Contact" du Footer */
+
 .footer-border1 {
-	background: #D52B1E;
+    background: #fa5b0f;
 }
 
 .btn-newsletter {
-	background: #D52B1E;
+    background: #fa5b0f;
 }
