--- a/ISVFwithnewpage/css/style.css
+++ b/ISVFwithnewpage/css/style.css
@@ -151,6 +151,10 @@ select {
     padding-right: 15px;
 }
 
+.portfolio .padd-15 {
+    padding-left: 1px !important;
+}
+
 .container {
     max-width: 1100px;
     width: 100%;
@@ -413,7 +417,8 @@ select {
     display: flex;
     background: linear-gradient(rgba(0, 0, 0, .4), rgba(0, 0, 0, .4)), url(../images/genevamainbg-blur.jpg);
     /* background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../images/genevamainbgbg.jpg); */
-    opacity: 1.1; /* 1.1 */
+    opacity: 1.1;
+    /* 1.1 */
 }
 
 .home .intro {
@@ -1495,6 +1500,7 @@ body.dark .footer-bottom {
     background: #151515;
 }
 
+
 /* Responsive */
 
 @media (max-width: 1199px) {
@@ -1585,6 +1591,25 @@ body.dark .footer-bottom {
 
 
 /*Landing page*/
+
+
+/* Test  Landing page - Transition */
+
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-100%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+.intro {
+    animation: 1.5s ease-out 0s 1 slideInFromLeft;
+}
+
+
+/* End Test  Landing page - Transition */
 
 #hero h1:nth-child(1),
 #hero h1:nth-child(2) {
@@ -2064,76 +2089,97 @@ input[type="email"] {
 
 
 /* Page OUTILS */
+
 .image-diagramme {
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
+
 @media screen and (min-width: 1024px) {
     .image-diagramme {
         width: 50%;
     }
 }
 
+
 /* EACH DEVICE */
 
+
 /* MOTO G4 & GALAXY S5 */
+
 @media screen and (max-width: 360px) {
     .image-diagramme {
         width: 90%;
     }
 }
 
+
 /* PIXEL 2 & PIXEL 2 XL */
+
 @media screen and (min-width: 410px) {
     .image-diagramme {
         width: 95%;
     }
 }
 
+
 /* IPHONE 5 SE */
+
 @media screen and (max-width: 320px) {
     .image-diagramme {
         width: 95%;
     }
 }
 
+
 /* IPHONE 6 7 8 */
+
 @media screen and (min-width: 375px) {
     .image-diagramme {
         width: 95%;
     }
 }
 
+
 /* IPHONE 6 7 8 PLUS */
+
 @media screen and (max-width: 414px) {
     .image-diagramme {
         width: 95%;
     }
 }
 
+
 /* IPHONE X */
+
 @media screen and (max-width: 375px) {
     .image-diagramme {
         width: 95%;
     }
 }
 
+
 /* IPAD */
+
 @media screen and (min-width: 767px) {
     .image-diagramme {
         width: 50%;
     }
 }
 
+
 /* IPAD PRO */
+
 @media screen and (min-width: 1024px) {
     .image-diagramme {
         width: 50%;
     }
 }
 
+
 /* GALAXY FOLD */
+
 @media screen and (min-width: 280px) {
     .image-diagramme {
         width: 90%;
